--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.5.2",
+    "react-lazy-load-image-component": "^1.6.0",
     "react-router-dom": "^6.13.0",
     "react-scroll": "^1.8.9"
   },
